wcToggle.js * defaultStyle() - fixes width to min-content, sets white-space: nowrap on the label
wcBarChart.js
* updateBar() - added, this updates existing bars without re-rendering 
the whole thing
* setBars() - added, is async, allows animation on setting bars
* bars (setter) - now cars setBars (animation mode disabled)

--- a/wcWorkbanch/main.css
+++ b/wcWorkbanch/main.css
@@ -36,4 +36,6 @@ body {
     --wc-screen-holder-menu-button-select-border-color: transparent;
     --wc-screen-holder-menu-button-select-background-color: rgba(237, 85, 59, .25);
     --wc-screen-holder-menu-button-select-color: rgb(237, 85, 59);
+    --wc-formelement-label-color: rgb(237, 85, 59);
+    --wc-toggle-label-color: rgb(237, 85, 59);
 }
